# erxi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  exi4json
.forgejo/workflows/: ci.yml
docs/: architecture.md  byte-diff-analyse.md  canonical-exi-abweichungen.md  cli-cross-test-coverage.md  exi4json-analyse.md  infoset-mapping.md  interop-deviations.md  oom-analyse.md
examples/: decode_one.rs  dtrm_cross_test.rs  dump_grammar.rs  full_cross_test.rs  trace_one.rs  xml_to_exi.rs
fuzz/: Cargo.toml  run_all.sh
fuzz/corpus/compression/: simple_precompression.exi
fuzz/corpus/decode/: simple_bytealigned.exi
fuzz/corpus/decode_json/: arrays.exi  basic.exi  empty_object.exi  escaping.exi  nested.exi  numbers.exi  string_escapes.exi
fuzz/corpus/encode/: simple_with_cookie.exi
fuzz/corpus/encode_json/: nested.json
fuzz/corpus/roundtrip/: comment.xml  complex.xml  deep_nesting.xml
fuzz/corpus/xsd/: complex.xsd  minimal.xsd
fuzz/fuzz_targets/: compression.rs  decode.rs  decode_json.rs  encode.rs  encode_json.rs  header.rs  options_codec.rs  roundtrip.rs  roundtrip_json.rs  xsd.rs
scripts/: complete.sh  run.sh  run_all_cross_tests.sh  run_cross_matrix_test.sh  run_dtrm_cross_test.sh  run_full_cross_matrix.sh  run_w3c_debug_traces.sh  setup.sh  verify.sh
scripts/debug/: traces.sh
src/: binary.rs  bit_width.rs  bitstream.rs  boolean.rs  compression.rs  datetime.rs  decimal.rs  enumeration.rs  error.rs  event.rs  event_code.rs  event_content.rs  exi4json.rs  float.rs  grammar.rs  header.rs  integer.rs  lib.rs  list.rs  media_type.rs  memory_monitor.rs  n_bit_unsigned_integer.rs  options.rs  options_codec.rs  precompression.rs  proto_grammar.rs  qname.rs  rcs.rs  schema.rs  streaming.rs  string.rs  string_table.rs  typed_value.rs  undeclared.rs  unsigned_integer.rs  xml.rs  xml_serializer.rs
src/decoder/: api.rs  compression.rs  context.rs  lazy.rs  mod.rs  qname.rs  tests.rs  value.rs
src/encoder/: compression.rs  config.rs  mod.rs  pending.rs  qname.rs  tests.rs  value.rs
src/rcs/: parser.rs
src/xml/: dtd.rs  emit.rs
src/xsd/: imports.rs  mod.rs
tests/: cli_cross_exificient.rs  cli_e2e.rs  conformance.rs  coverage_matrix.rs  cross_matrix_expectations.tsv  cross_rtt.rs  dtrm_rtt.rs  exi4json_cross_exificient.rs  exi4json_fixtures.rs  full_cross_matrix.rs  infoset_rtt.rs  interop.rs  w3c_interop.rs  xml_serializer_tests.rs
tests/common/: canonical.rs  exif_batch.rs
tests/fixtures/: alphabet.xml  alphabet_bitpacked.exi  alphabet_bytealigned.exi  comment_bitpacked.exi  comment_bytealigned.exi  complex_bitpacked.exi  complex_bytealigned.exi  deep_nesting_bitpacked.exi  deep_nesting_bytealigned.exi  doctype.xml  doctype_bitpacked.exi  doctype_bytealigned.exi  fragment.xml  fragment_bitpacked.exi  fragment_bytealigned.exi  large_grammar.xml  large_grammar_bitpacked.exi  large_grammar_bytealigned.exi  long_strings.xml  long_strings_bitpacked.exi  (+28 more)
tools/: ExifBatch.java
(+1795 files in other folders)
