[package]
name = "erxi-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.erxi]
path = ".."
default-features = false

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_json"
path = "fuzz_targets/decode_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "header"
path = "fuzz_targets/header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false
