[package]
name = "erxi-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.erxi]
path = ".."
default-features = false

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_json"
path = "fuzz_targets/decode_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "header"
path = "fuzz_targets/header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encode_json"
path = "fuzz_targets/encode_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_json"
path = "fuzz_targets/roundtrip_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "options_codec"
path = "fuzz_targets/options_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xsd"
path = "fuzz_targets/xsd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compression"
path = "fuzz_targets/compression.rs"
test = false
doc = false
bench = false
